# dafne-apps

./: LICENSE  README.md  buildah-python+hs.sh  make_pod.sh
compose/: docker-compose.yml.primitivo
compose/cache/: docker-compose.yml
compose/runs/: .env  docker-compose.yml  init-arena.sh
compose/show/: .env  docker-compose.yml
hs.readdata/: CHANGELOG.md.save0  NOTAS.md  data  proy.cabal
hs.readdata/app/: Chunk.hs  Main.hs
hs.readdata/buildah_scripts/: buildah.sh  full-rebuild.sh  rebuild.sh  req-files.sh  req-pqs.sh
hs.readdata/src/: AppEnv.hs  AppEnv.hs.servant  Clients.hs.servant  Conversion.hs  Leaflet.hs.servant  Process.hs.servant  QuerySiDB.hs
hs.readdata/tst/: read1eq.py  tstjson.json
hs.serving/: .gitignore  Dockerfile  Dockerfile.hsbase  Dockerfile.hscache  README.md  data  docker-compose.yml  package.yaml  stack.yaml
hs.serving/app/: Main.hs
hs.serving/src/: Gettimes.hs  Lib.hs  Process.hs  Query.hs  QueryFiles.hs  QuerySiDB.hs  ReadXzFile.hs  TenvParser.hs  Types.hs
hs.serving/www/: api.js  index.html  mapOneEvent.html
py.arena/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.loader.toml  pyproject.toml
py.arena/arena/: __init__.py
py.arena/dafneloader/: __init__.py  _constants.py  dsets.py
py.arena/docker/: gosu_entry.sh
py.arena/docker/install_scripts/: install_gosu.sh
py.cache/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
py.cache/dafnecacher/: __init__.py  _constants.py  cacher.py
py.dset/: .dockerignore  .gitignore  Dockerfile  README.md  TO-BE-UP.md  docker-compose.old.yml  docker-compose.yml  pyproject.toml
py.dset/compose-test/: docker-compose.yml
py.dset/dafnedset/: .pyre_configuration  README.md  __init__.py  __main__.py  _constants.py  _db_connect.py  base.py  base_simple.py  datasets.py  datasets_simple.py  fun_ops.py  fun_transformations.py  monkey_patch.py  split_simple.py  tensorflow.py  tfdataspec.py  transformations.py
py.dset/dafnedset/extensions/: __init__.py  _main.py
py.dset/dafnedset/parquet/: __init__.py
py.dset/dafnedset/presets/: README.md  __init__.py  neg10.py  pos10.py  posraw.py  total.py
py.dset/dafnedset/presets_simple/: __init__.py  fakeraw.py  neg10.py  negraw.py  pos08.py  pos10.py  posraw.py  total.py  total_pos.py  total_pos_n.py
py.dset/dafnedset/serve/: __init__.py  base.py  handlers.py
py.dset/dafnedset/tf/: glue.py
py.dset/dafnedset/tools/: __init__.py  _main.py
py.dset/docker/: gosu_entry.sh  requirements.txt
py.dset/docker/install_scripts/: install_gosu.sh  install_pp.sh
py.dset/notebooks/: SmallTest-Copy1.ipynb  SmallTest.ipynb  Test-base_simple-Copy1.ipynb  Test-base_simple-Copy2.ipynb  Test-base_simple.ipynb  Untitled.ipynb
py.dset/stubs/pyarrow/: __init__.pyi  lib.pyi
py.dset/test-scripts/: test-base-simple.py  test-data-rot-op.py  test-presets-v2.py
