cabal-version:      2.4
name:               proy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Javier Clavijo
maintainer:         jjclavijo@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Query
                    , Types

    other-modules:    AppEnv
                    , QueryFiles
                    , QuerySiDB
                    , ReadXzFile
                    , TenvParser

    hs-source-dirs:   src

    build-depends:    aeson
                    , base >=4.7 && <5
                    , bytestring
                    , lzma
                    , postgresql-simple
                    , text
                    , time

    default-language: Haskell2010

executable proy
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base >=4.7 && <5
                    , aeson
                    , bytestring
                    , utf8-string
                    , proy
                    , cmdargs

    hs-source-dirs:   app
    default-language: Haskell2010

executable chunk
    main-is:          Chunk.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base >=4.7 && <5
                    , aeson
                    , bytestring
                    , utf8-string
                    , proy
                    , cmdargs

    hs-source-dirs:   app
    default-language: Haskell2010
