[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "arena"
author = "Javier J. Clavijo"
author-email = "jclavijo@gmail.com"
home-page = "https://jjclavijo.github.io/pydafne/"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
]
requires-python=">=3.3"
